testing new text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Flock Blocker</h1>
+<p>Flock Blocker is a game I worked on last year during my game workshop class with several other team members. </p>
 </body>
 </html>
