attempt to set theme through html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
+
 <body>
 <h1>Flock Blocker</h1>
 <p>Flock Blocker is a game I worked on last year during my game workshop class with several other team members. </p>
 </body>
-</html>
