--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ layout: default
 <body>
 <h1>Flock Blocker</h1>
 <p>Flock Blocker is a game I worked on last year during my game workshop class with several other team members. </p>
+<a href = "/pdfs/Adam Stubitsch Resume.pdf"</a>
 </body>
