--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@ layout: default
 <body>
 <h1>Flock Blocker</h1>
 <p>Flock Blocker is a game I worked on last year during my game workshop class with several other team members. </p>
-<a href = "/pdfs/Adam Stubitsch Resume.pdf"</a>
+//<body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://docs.google.com/gview?url=https://github.com/AStubitsch/AStubitsch.github.io/blob/master/pdfs/Adam%20Stubitsch%20Resume.pdf&embedded=true" style="width:50%; height:100%;" frameborder="0"></iframe>
+//</body>
 </body>
