adding links to resume and linkedin

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <body>
-<h1>Flock Blocker</h1>
-<p>Flock Blocker is a game I worked on last year during my game workshop class with several other team members. </p>
-<iframe src="https://docs.google.com/gview?url=https://github.com/AStubitsch/AStubitsch.github.io/blob/master/pdfs/Adam%20Stubitsch%20Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+<h1>Welcome!</h1>
+<p>My name is Adam Stubitsch. I am a student at DePaul University, completing my degree in Game Programming. As I continue to develop projects, 
+both in and out of school, I would like to able to document my processes and share some of my work. </p>
+<a href="https://www.linkedin.com/in/adam-stubitsch-97011691/">Linkedin</a><br>
+<a href="pdfs/Adam Stubitsch Resume.pdf">Resume</a><br>
 </body>
