add links header.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
 <h1>Welcome!</h1>
 <p>My name is Adam Stubitsch. I am a student at DePaul University, completing my degree in Game Programming. As I continue to develop projects, 
 both in and out of school, I would like to able to document my processes and share some of my work. </p>
+<h2>Links</h2>
 <a href="https://www.linkedin.com/in/adam-stubitsch-97011691/">Linkedin</a><br>
 <a href="pdfs/Adam Stubitsch Resume.pdf">Resume</a><br>
 </body>
