writing descriptions of code

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@ layout: default
 <body>
 <h1>Adam Stubitsch</h1>
 <img src="images/Profile Pic.jpg">
-<p>A determined and adaptable creator.</p>
+<p><i>A determined and adaptable creator.</i></p>
+
 <p>I am a student at DePaul University, completing my degree in Game Programming. As I continue to develop projects, 
 both in and out of school, I would like to able to document my processes and share some of my work. </p>
-<h2>Links</h2>
-<a href="Projects.html">Projects</a><br>
+
+<p>Click <a href="Projects.html">here</a> to view some of my past coding projects.</p>
+
+<h2>Other Links</h2>
 <a href="https://www.linkedin.com/in/adam-stubitsch-97011691/" target="_blank">Linkedin</a><br>
 <a href="pdfs/Adam Stubitsch Resume.pdf" target="_blank">Resume</a><br>
 <br>
+
+</body>
