--- a/Projects.html
+++ b/Projects.html
@@ -5,14 +5,21 @@ layout: default
 <body>
 
 <h1>Projects</h1>
-<p>Here you can preview snippets of some of my past coding projects, both from in and out of school. </p>
+<p>Here you can preview snippets of some of my past coding projects. </p>
 
-<h2>Singletons</h2>
-<p>A singleton is a design pattern that allows a class to be accessible from anywhere. A singleton
+<h2>Centipede</h2>
+<img src="images/centipede.png">
+<p>The first project I'll be sharing is a recreation of an old arcade game, <i>Centipede</i>. Over the 
+course of 10 weeks, I was tasked with recreating the game as closely as possible while learning about
+a plethora of coding design patterns to ease the process and build the game on a structurally sound
+infrastrucutre. Below are a couple of patterns I utilized.</p>
+
+<h3>Singletons</h3>
+<p>A singleton is a design pattern that allows a class to be accessible from anywhere. This pattern
 creates a single instance of a class, allowing its information to be accessible as long as the program
-is running.
-This is especially
-important when designing class structure in games. Some objects, such as 
+is running. This functionality can be very useful when designing class structure in games. 
+Some objects, such as the enemies and mushrooms, hold different data on position, health, etc. But managerial
+classes such as an enemy manager or game manager are perfect with a singleton structure.</p>
 <pre>
 <code>
 // singleton
@@ -30,10 +37,81 @@ static GameController& Instance()
 </code>
 </pre>
 
-<h2>Links</h2>
+<h3>Finite State Machines</h3>
+<p>A finite state machine is incredibly useful for managing different actions for a game object to perform.
+They reduce the complexity of coding by defining an object's actions into distinct states, clearly defining
+what actions will be performed, and under what conditions the object will switch to a different state. 
+Below is an FSM for the centipede object, with 10 states: four for moving across the screen, four for 
+turning, and two for turning while poisoned.
+
+<pre>
+<code>
+class MoveFSM {
+public:
+	static const MoveRightAndDownwards StateMoveRightAndDownwards;
+	static const MoveLeftAndDownwards StateMoveLeftAndDownwards;
+	static const MoveRightAndUpwards StateMoveRightAndUpwards;
+	static const MoveLeftAndUpwards StateMoveLeftAndUpwards;
+	static const TurnDownSwitchToLeft StateTurnDownSwitchToLeft;
+	static const TurnDownSwitchToRight StateTurnDownSwitchToRight;
+	static const TurnUpSwitchToLeft StateTurnUpSwitchToLeft;
+	static const TurnUpSwitchToRight StateTurnUpSwitchToRight;
+	static const PoisonedTurnDownSwitchToLeft StatePoisonedTurnDownSwitchToLeft;
+	static const PoisonedTurnDownSwitchToRight StatePoisonedTurnDownSwitchToRight;
+};
+</code>
+</pre>
+
+<p>Looking at one of the turn states, the centipede's action during this state is to complete a frame of
+animation by turning down and to the right. Every frame, we check to see if this movement is complete. If it is,
+we call the GetNextState function to determine the centipede's next state. After a centipede completes a turn,
+there are four different states it could go into. The state machine clearly breaks down the conditions
+required for each state to begin.
+
+<pre>
+<code>
+void TurnDownSwitchToRight::Update(CentipedeHead * chead) const 
+{
+	chead->TurnDownSwitchToRight();	// complete a part of the turn
+}
+
+bool TurnDownSwitchToRight::MovementIsComplete(CentipedeHead * chead) const 
+{
+	return chead->TurnisComplete();
+}
+
+// called when the turn is complete, determine next state
+const MoveState * TurnDownSwitchToRight::GetNextState(CentipedeHead * chead) const 
+{
+	chead->FinishTurn();
+	
+	// if the centipede is touching a poisoned mushroom, turn downwards
+	if (chead->IsTouchingPoisonedMushroomOnRight()) return &MoveFSM::StatePoisonedTurnDownSwitchToLeft;
+
+	// if the centipede will collide with an object, turn away from it
+	if (chead->WillCollideOnRight()) 
+	{
+		// turn up if the centipede is at the bottom of the screen
+		if (chead->WillPassBelowPlayableArea()) return &MoveFSM::StateTurnUpSwitchToLeft;
+		// otherwise, turn down
+		else return &MoveFSM::StateTurnDownSwitchToLeft;
+	}
+	
+	// otherwise, move forward
+	else 
+	{
+		chead->PrepareForForwardMovement();
+		return &MoveFSM::StateMoveRightAndDownwards;
+	}
+}
+</code>
+</pre>
+
+<p>Click <a href="index.html">here</a> to go back to the main page.</p>
+
+<h2>Other Links</h2>
 <a href="https://www.linkedin.com/in/adam-stubitsch-97011691/" target="_blank">Linkedin</a><br>
 <a href="pdfs/Adam Stubitsch Resume.pdf" target="_blank">Resume</a><br>
 <br>
-
 
 </body>
