adding different pages for centipede and game engine

--- a/Centipede.html
+++ b/Centipede.html
@@ -4,17 +4,14 @@ layout: default
 
 <body>
 
-<h1>Projects</h1>
-<p>Here you can preview snippets of some of my past coding projects. </p>
-
-<h2>Centipede</h2>
-<img src="images/centipede.png">
+<h1>Centipede</h1>
+<img src="images/centipede.jpg">
 <p>The first project I'll be sharing is a recreation of an old arcade game, <i>Centipede</i>. Over the 
 course of 10 weeks, I was tasked with recreating the game as closely as possible while learning about
 a plethora of coding design patterns to ease the process and build the game on a structurally sound
 infrastrucutre. Below are a couple of patterns I utilized.</p>
 
-<h3>Singletons</h3>
+<h2>Singletons</h2>
 <p>A singleton is a design pattern that allows a class to be accessible from anywhere. This pattern
 creates a single instance of a class, allowing its information to be accessible as long as the program
 is running. This functionality can be very useful when designing class structure in games. 
@@ -37,7 +34,7 @@ static GameController& Instance()
 </code>
 </pre>
 
-<h3>Finite State Machines</h3>
+<h2>Finite State Machines</h2>
 <p>A finite state machine is incredibly useful for managing different actions for a game object to perform.
 They reduce the complexity of coding by defining an object's actions into distinct states, clearly defining
 what actions will be performed, and under what conditions the object will switch to a different state. 
