--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ layout: default
 <p>I am a student at DePaul University, completing my degree in Game Programming. As I continue to develop projects, 
 both in and out of school, I would like to able to document my processes and share some of my work. </p>
 
-<p>Click <a href="Projects.html">here</a> to view some of my past coding projects.</p>
+<h2>Projects</h2>
+<a href="Centipede.html">Centipede</a><br>
+<a href="Game Engine.html">Game Engine</a><br>
 
 <h2>Other Links</h2>
 <a href="https://www.linkedin.com/in/adam-stubitsch-97011691/" target="_blank">Linkedin</a><br>
