adding centipede video

--- a/Centipede.html
+++ b/Centipede.html
@@ -5,7 +5,11 @@ layout: default
 <body>
 
 <h1>Centipede</h1>
-<img src="images/centipede.jpg">
+
+<video autoplay muted loop>
+<source src="videos/Centipede Trim.mp4">
+</video>
+
 <p>The first project I'll be sharing is a recreation of an old arcade game, <i>Centipede</i>. Over the 
 course of 10 weeks, I was tasked with recreating the game as closely as possible while learning about
 a plethora of coding design patterns to ease the process and build the game on a structurally sound
