--- a/Game Engine.html
+++ b/Game Engine.html
@@ -6,11 +6,26 @@ layout: default
 
 <h1>Game Engine</h1>
 
-<p>For almost six months, I was tasked with creating a functioning 3D game engine.</p>
+<p>For almost six months, I was tasked with creating a functioning 3D game engine. Creating this game engine
+was an incredibly difficult dask, but was a very fulfilling experience. It gave me very low-level 
+access to systems code, providing much more direct control over how a game runs behind the scenes, aspects
+that most people don't even think about. Over six months, I had to implement complicated systems such as
+alarm registration for timed events, keyboard input registration, and even tasks as simple as rendering
+game objects on-screen took time to perform accurately.</p>
 
-<h2>Collision</h2>
+<p>Below are a couple snippets of some of the work I did in putting my engine together.</p>
 
-<p>The collision system took several weeks to fully implement. </p>
+<h2>Collision Detection</h2>
+
+<p>Out of all the systems for my engine, designing collision was probably the most work, taking several
+weeks to fully develop. Collision is a crucial part of developing games, as many events take place
+as a result of it. When a bullet hits another player, for instance, it is collision detection that registers
+the hit, and as a result, performs an action on what to do next in-game.</p>
+
+<p>The following code demonstrates one of the many collision methods utilized; in this case, collision
+between two objects using sphere colliders. To measure the calculation correctly, you measure the distance
+between the two spheres' centers, and compare it to the sum of their radii. If their distance is less, they are 
+colliding.</p>
 
 <pre>
 <code>
