trying to adjust video width

--- a/Centipede.html
+++ b/Centipede.html
@@ -6,7 +6,7 @@ layout: default
 
 <h1>Centipede</h1>
 
-<video autoplay muted loop>
+<video autoplay muted loop width="100%">
 <source src="videos/Centipede Trim.mp4">
 </video>
 
