--- a/Game Engine.html
+++ b/Game Engine.html
@@ -41,9 +41,10 @@ bool MathTools​::Intersect(const CollisionVolumeBSphere & A, const CollisionVo
 }
 </code>
 </pre>
+<br>
 
 <!-- For some reason, autoplaying videos requires that they are muted, otherwise it won't work. -->
-<video autoplay muted loop>
+<video autoplay muted loop width="100%">
 <source src="videos/Game Engine Trim.mp4" type="video/mp4">
 </video>
 
