--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <body>
 <h1>Adam Stubitsch</h1>
-<img src="images/Profile Pic.jpg">
+<img src="images/Profile Pic.jpg" width="100%">
 <p><i>A determined and adaptable creator.</i></p>
 
 <p>I am a student at DePaul University, completing my degree in Game Programming. As I continue to develop projects, 
