--- a/Centipede.html
+++ b/Centipede.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 
+<head>
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+
 <body>
 
 <h1>Centipede</h1>
