--- a/Game Engine.html
+++ b/Game Engine.html
@@ -2,9 +2,16 @@
 layout: default
 ---
 
+<head>
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+
 <body>
 
 <h1>Game Engine</h1>
+
+<img src="images/game engine scene.jpg" width="100%">
 
 <p>For almost six months, I was tasked with creating a functioning 3D game engine. Creating this game engine
 was an incredibly difficult dask, but was a very fulfilling experience. It gave me very low-level 
