--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 
+<head>
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+
 <body>
 <h1>Adam Stubitsch</h1>
 <img src="images/Profile Pic.jpg" width="100%">
