--- a/Portfolio Site/Portfolio Site/index.html
+++ b/Portfolio Site/Portfolio Site/index.html
@@ -4,12 +4,12 @@ layout: default
 
 <head>
 <!-- link to main stylesheet -->
-<link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
 
 <body>
 <h1>Adam Stubitsch</h1>
-<img src="images/Profile Pic.jpg" width="100%">
+<img src="../images/Profile Pic.jpg" width="100%">
 <p><i>A determined and adaptable creator.</i></p>
 
 <p>I am a student at DePaul University, completing my degree in Game Programming. As I continue to develop projects, 
@@ -21,7 +21,7 @@ both in and out of school, I would like to able to document my processes and sha
 
 <h2>Other Links</h2>
 <a href="https://www.linkedin.com/in/adam-stubitsch-97011691/" target="_blank">Linkedin</a><br>
-<a href="pdfs/Adam Stubitsch Resume.pdf" target="_blank">Resume</a><br>
+<a href="../pdfs/Adam Stubitsch Resume.pdf" target="_blank">Resume</a><br>
 <br>
 
 </body>
