--- a/Portfolio Site/Portfolio Site/Centipede.html
+++ b/Portfolio Site/Portfolio Site/Centipede.html
@@ -4,28 +4,32 @@ layout: default
 
 <head>
 <!-- link to main stylesheet -->
-<link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
 
 <body>
 
-<h1>Centipede</h1>
+    <h1>Centipede</h1>
 
-<video autoplay muted loop width="100%">
-<source src="videos/Centipede Trim.mp4">
-</video>
+    <video autoplay muted loop width="100%">
+        <source src="../videos/Centipede Trim.mp4">
+    </video>
 
-<p>The first project I'll be sharing is a recreation of an old arcade game, <i>Centipede</i>. Over the 
-course of 10 weeks, I was tasked with recreating the game as closely as possible while learning about
-a plethora of coding design patterns to ease the process and build the game on a structurally sound
-infrastrucutre. Below are a couple of patterns I utilized.</p>
+    <p>
+        The first project I'll be sharing is a recreation of an old arcade game, <i>Centipede</i>. Over the
+        course of 10 weeks, I was tasked with recreating the game as closely as possible while learning about
+        a plethora of coding design patterns to ease the process and build the game on a structurally sound
+        infrastrucutre. Below are a couple of patterns I utilized.
+    </p>
 
-<h2>Singletons</h2>
-<p>A singleton is a design pattern that allows a class to be accessible from anywhere. This pattern
-creates a single instance of a class, allowing its information to be accessible as long as the program
-is running. This functionality can be very useful when designing class structure in games. 
-Some objects, such as the enemies and mushrooms, hold different data on position, health, etc. But managerial
-classes such as an enemy manager or game manager are perfect with a singleton structure.</p>
+    <h2>Singletons</h2>
+    <p>
+        A singleton is a design pattern that allows a class to be accessible from anywhere. This pattern
+        creates a single instance of a class, allowing its information to be accessible as long as the program
+        is running. This functionality can be very useful when designing class structure in games.
+        Some objects, such as the enemies and mushrooms, hold different data on position, health, etc. But managerial
+        classes such as an enemy manager or game manager are perfect with a singleton structure.
+    </p>
 <pre>
 <code>
 // singleton
@@ -43,12 +47,14 @@ static GameController& Instance()
 </code>
 </pre>
 
-<h2>Finite State Machines</h2>
-<p>A finite state machine is incredibly useful for managing different actions for a game object to perform.
-They reduce the complexity of coding by defining an object's actions into distinct states, clearly defining
-what actions will be performed, and under what conditions the object will switch to a different state. 
-Below is an FSM for the centipede object, with 10 states: four for moving across the screen, four for 
-turning, and two for turning while poisoned.</p>
+    <h2>Finite State Machines</h2>
+    <p>
+        A finite state machine is incredibly useful for managing different actions for a game object to perform.
+        They reduce the complexity of coding by defining an object's actions into distinct states, clearly defining
+        what actions will be performed, and under what conditions the object will switch to a different state.
+        Below is an FSM for the centipede object, with 10 states: four for moving across the screen, four for
+        turning, and two for turning while poisoned.
+    </p>
 
 <pre>
 <code>
@@ -68,11 +74,13 @@ public:
 </code>
 </pre>
 
-<p>Looking at one of the turn states, the centipede's action during this state is to complete a frame of
-animation by turning down and to the right. Every frame, we check to see if this movement is complete. If it is,
-we call the GetNextState function to determine the centipede's next state. After a centipede completes a turn,
-there are four different states it could go into. The state machine clearly breaks down the conditions
-required for each state to begin.</p>
+    <p>
+        Looking at one of the turn states, the centipede's action during this state is to complete a frame of
+        animation by turning down and to the right. Every frame, we check to see if this movement is complete. If it is,
+        we call the GetNextState function to determine the centipede's next state. After a centipede completes a turn,
+        there are four different states it could go into. The state machine clearly breaks down the conditions
+        required for each state to begin.
+    </p>
 
 <pre>
 <code>
@@ -117,7 +125,7 @@ const MoveState * TurnDownSwitchToRight::GetNextState(CentipedeHead * chead) con
 
 <h2>Other Links</h2>
 <a href="https://www.linkedin.com/in/adam-stubitsch-97011691/" target="_blank">Linkedin</a><br>
-<a href="pdfs/Adam Stubitsch Resume.pdf" target="_blank">Resume</a><br>
+<a href="../pdfs/Adam Stubitsch Resume.pdf" target="_blank">Resume</a><br>
 <br>
 
 </body>
