--- a/Portfolio Site/Portfolio Site/index.html
+++ b/Portfolio Site/Portfolio Site/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <head>
-<!-- link to main stylesheet -->
-<link rel="stylesheet" type="text/css" href="../css/main.css">
+    <!-- link to main stylesheet -->
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
